--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/BeardOfDan/Performance-Keiko-Corp-Website#readme",
   "dependencies": {
+    "compression": "^1.7.2",
     "express": "^4.16.3",
     "path": "^0.12.7"
   }
